[gd_scene load_steps=4 format=3 uid="uid://tes5qvvjxl1f"]

[ext_resource type="Script" uid="uid://df1xryx5570ic" path="res://scenes/endless_runner/crowd_member.gd" id="1_goop6"]
[ext_resource type="Texture2D" uid="uid://da3hlf8u7y4em" path="res://icon.svg" id="2_wpe4c"]

[sub_resource type="LabelSettings" id="LabelSettings_q7wum"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="CrowdMember" type="Node2D"]
script = ExtResource("1_goop6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.536743e-07, 9.536743e-07)
scale = Vector2(0.37499997, 0.37499997)
texture = ExtResource("2_wpe4c")

[node name="HeldSign" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -16.0

[node name="Label" type="Label" parent="HeldSign"]
layout_mode = 0
offset_top = -5.0
offset_right = 48.0
offset_bottom = 40.0
text = "L"
label_settings = SubResource("LabelSettings_q7wum")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StandupTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-24, -24, 48, 48)

[connection signal="timeout" from="StandupTimer" to="." method="_on_standup_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
